tests/fail/use_before_declare.dode

fn main() {
    x + 3;
    let x = 3;
    return 0;
}
